--- a/templates/index.html
+++ b/templates/index.html
@@ -365,7 +365,7 @@
     <div class="content">
         <h1>Building With Data.</h1>
         <p>
-            From algorithms to production systems -- I design, train, and deploy
+            From algorithms to production systems - I design, train, and deploy
             intelligent solutions using data and Python.
         </p>
 
