--- a/templates/index.html
+++ b/templates/index.html
@@ -64,8 +64,8 @@
         </div>
 
         <div class="cta-group">
-            <a href="mailto:email@example.com" class="btn hire-btn">Hire Me</a>
-            <a href="https://buymeacoffee.com" target="_blank" rel="noopener noreferrer" class="btn coffee-btn">
+            <a href="mailto:contact@akashchaudhari.in" class="btn hire-btn">Hire Me</a>
+            <a href="https://razorpay.me/@akashchaudharifreelanceservic" target="_blank" rel="noopener noreferrer" class="btn coffee-btn">
                 <span>Buy Me A Coffee</span>
                 <svg fill="#000000" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                     <path
